--- a/views/parts/nav/navbar.html
+++ b/views/parts/nav/navbar.html
@@ -1,6 +1,6 @@
 <div class="labs-container">
 
-  <div class="loader">
+  <div class="loader hide">
     <span class="spinner"></span>
   </div>
 
@@ -52,19 +52,22 @@
 
 <script>
 
+  document.body.style.overflow = 'hidden';
+
+  setTimeout(() => {
+
+    document.body.style.overflow = 'auto';
+    document.querySelector('.loader').classList.add('hide');
+
+  }, 100);
+
   try {
-    var load_body = document.body;
-    var loader = document.querySelector('.loader');
-    load_body.style.overflow = 'hidden';
-    setTimeout(() => {
-      
-      load_body.style.overflow = 'auto';
-      loader.classList.add('hide');
 
-    }, 100);
-
-  } catch (error) {
-    console.error(error);
+  } catch (e) {
+    console.error('error');
   }
 
+
+
 </script>
+<script src="/assets/js/jquery-3.3.1.min.js"></script>
