--- a/views/app/site/index.html
+++ b/views/app/site/index.html
@@ -3,11 +3,161 @@
   <div class="wallpaper"></div>
   <div class="ncode-container">
     <div class="nocode-header-caption">
-      <span class="bold">Construa uma Landing Page & <br> Torne-se independete na gestão do <br> teu negócio
+      <span class="bold">Sílica Nocode <br> nova tendência de negócios & <br> Torne-se independete
       </span>
-      <small class="tw-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores dolor consequatur <br> ipsum debitis, quis blanditiis ab sint odit quidem labore.</small>
+      <small class="tw-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores dolor consequatur <br>
+        ipsum debitis, quis blanditiis ab sint odit quidem labore.</small>
+
+      <div class="ncode-actions">
+        <a href="" class="ncode-btn-action"> <small>Explorar</small></a>
+        <a href="" class="ncode-btn-action"> <small>Registra-te</small></a>
+      </div>
+
+      <div class="titlebar">
+        <div class="titlebar-item">
+          <span class="title">+ 4.5K</span>
+          <small>Usuários aderiram</small>
+        </div>
+        <div class="titlebar-item">
+          <span class="title">+ 1.5K</span>
+          <small>Landing Páginas</small>
+        </div>
+        <div class="titlebar-item">
+          <span class="title">+ 0.5K</span>
+          <small>Dashboard</small>
+        </div>
+      </div>
+
     </div>
-
-
   </div>
 </header>
+
+<div class="card-section">
+  <div class="card-section-header">
+    <div class="ncode-container">
+      <div class="title">
+        <small class="tw-muted">Nocode| uma Ferramenta Sílica</small>
+        <span class="bold">Conheça a nova tendência de negócios</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-section-contain">
+    <div class="ncode-container">
+      <div class="card-section-row">
+        <div class="contain-row">
+          <div class="list-vertical">
+            <div class="list-item-lead">
+              <span class="item">Tenha a possibilidade de:</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Cria a sua própria página</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Editar ela do seu jeito</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Gere os teus visitantes</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Converta-os em leads ou clientes</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Façam um marketing do teu négocio</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Promova os teus produtos e serviços</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">Disponibiliza ações específicas</span>
+            </div>
+            <div class="list-item">
+              <span class="bi-check2-all"></span>
+              <span class="item">E muitos mais | <a href=""><small>ver Sílica</small></a> </span>
+            </div>
+          </div>
+        </div>
+        <div class="contain-row">
+          <img src="/assets/images/pngegg.png" class="reaveled" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-section">
+  <div class="card-section-header">
+    <div class="ncode-container">
+      <div class="title">
+        <small class="tw-muted">Como funciona?</small>
+        <span class="bold">Aprende a trabalhar com Nocode</span>
+      </div>
+    </div>
+  </div>
+  <div class="card-section-contain">
+    <div class="ncode-container">
+      <div class="card-slider">
+        <div class="slider-item">
+          <div class="contain-text">
+            <span class="title">Primeiro</span>
+            <span>Procure por um template e Seleciona-o</span>
+          </div>
+          <div class="contain-img">
+            <img src="/assets/images/choose.png" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="contain-text">
+            <span class="title">Segundo</span>
+            <span>Faça as suas alterações sem necessidade de mexer no código e salve-as</span>
+          </div>
+          <div class="contain-img">
+            <img src="/assets/images/choose.png" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="contain-text">
+            <span class="title">Terceiro</span>
+            <span>Defina um nome para o seu domínio</span>
+          </div>
+          <div class="contain-img">
+            <img src="/assets/images/choose.png" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="contain-text">
+            <span class="title">Quarto</span>
+            <span>Publique o Landing Page</span>
+          </div>
+          <div class="contain-img">
+            <img src="/assets/images/choose.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-section">
+  <div class="card-section-header">
+    <div class="ncode-container">
+      <div class="title">
+        <small class="tw-muted">Planos e Preços</small>
+        <span class="bold">Com ter acesso</span>
+      </div>
+    </div>
+  </div>
+  <div class="card-section-contain">
+    <div class="ncode-container"></div>
+  </div>
+</div>
+
+
+<script src="/assets/js/site/index.js"></script>
