--- a/views/parts/footer.html
+++ b/views/parts/footer.html
@@ -1,3 +1,8 @@
 <footer>
-  Footer
+  <div class="ncode-container">
+    <small>&copy;
+      <script>document.write(new Date().getFullYear());</script> Todo os direitos reservados | Patenteado por: <a
+        href="https://silicaweb.ao/" class="color_silica" target="_blank">Sílica </a>
+    </small>
+  </div>
 </footer>
