--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -42,6 +42,7 @@ img {
   height: 60px;
   position: sticky;
   z-index: 111111111111;
+  background-color: #151521;
 }
 
 .ncode-navbar .ncode-container {
@@ -248,8 +249,8 @@ cARDS
 }
 
 .contain-row img {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   object-fit: contain;
 }
 
@@ -276,7 +277,7 @@ img.reaveled {
 .list-item {
   width: 100%;
   position: relative;
-  font-size: 24px;
+  font-size: 18px;
   display: flex;
   align-items: center;
   gap: 20px;
@@ -311,4 +312,205 @@ img.reaveled {
   max-width: 100%;
   height: 100%;
   position: relative;
+}
+
+
+
+/*
+CONTACTS
+*/
+
+.card-section-row:has(.contacts) {
+  justify-content: space-between;
+  margin-top: -2rem;
+}
+
+.contacts,
+.subject {
+  width: 46%;
+  position: relative;
+}
+
+.contact-item+.contact-item {
+  margin-top: 2rem;
+}
+
+.contact-item {
+  display: flex;
+  align-items: start;
+  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
+  gap: 10px;
+  font-family: 'Roboto-Light';
+}
+
+.contact-item a {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.contact-item a:hover {
+  text-decoration: underline;
+}
+
+.contact-social {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  gap: 10px;
+}
+
+.btn-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 10%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.btn-link small {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.btn-link:hover small {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+/*
+FOOTER
+*/
+
+footer {
+  height: 60px;
+  position: relative;
+  background-color: #22222E;
+}
+
+footer .ncode-container {
+  height: 100%;
+  line-height: 60px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+
+.color_silica {
+  color: #07f;
+}
+
+
+/*
+CONTACT FORM
+*/
+
+.ncode-form-item {
+  width: 100%;
+  height: 45px;
+  border-radius: 4px;
+  position: relative;
+  border: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.ncode-form-item + .ncode-form-item {
+  margin-top: 1rem;
+}
+
+.ncode-form-item button,
+.ncode-input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding-left: 5%;
+  color: #fdfdfd;
+  font-family: 'Roboto-Light';
+}
+
+.ncode-input:focus + .placeholder,
+.ncode-input:valid + .placeholder {
+  top: 0;
+  background-color: #151521;
+}
+
+textarea {
+  resize: none;
+  padding-top: 6.5%;
+}
+
+.ncode-form-item:has(textarea) {
+  height: 80px;
+}
+
+.ncode-form-item .placeholder {
+  top: 50%;
+  left: 5%;
+  position: absolute;
+  color: rgba(255, 255, 255, 0.4);
+  font-family: 'Roboto-Light';
+  transform: translateY(-50%);
+  transition: 0.2s ease-in-out;
+}
+
+.ncode-form-item button {
+  background-color: #07f;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+
+
+/*
+FAQS
+*/
+
+.card-faqs-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.faqs-item {
+  width: 100%;
+  position: relative;
+  padding: 0 1rem;
+  background-color: #22222E;
+  color: #fdfdfd;
+}
+
+.faqs-item + .faqs-item {
+  margin-top: 1rem;
+}
+
+.faqs-header {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  cursor: pointer;
+}
+.faqs-item.active .faqs-header {
+  font-family: 'Roboto-Medium';
+}
+
+.faqs-contain {
+  min-height: 0;
+  transition: height 0.1s ease-in-out, min-height 0.1 0.1s ease-in-out;
+}
+
+.faqs-contain span {
+  display: none;
+  font-family: 'Roboto-Light';
+}
+
+.faqs-item.active .faqs-contain {
+  min-height: 80px;
+}
+
+.faqs-item.active .faqs-contain span {
+  display: block;
 }
