--- a/views/app/site/index.html
+++ b/views/app/site/index.html
@@ -146,17 +146,97 @@
 </div>
 
 <div class="card-section">
-  <div class="card-section-header">
-    <div class="ncode-container">
-      <div class="title">
-        <small class="tw-muted">Planos e Preços</small>
-        <span class="bold">Com ter acesso</span>
-      </div>
-    </div>
-  </div>
   <div class="card-section-contain">
     <div class="ncode-container">
-      <div class="card-princing"></div>
+      <div class="card-pricing">
+        <div class="card-pricing-header">
+          <span class="title">ESCOLHA UM PLANO PARA SI</span>
+          <div class="ncode-actions">
+            <a href="" class="ncode-btn-action active"> <small>Mensal</small></a>
+            <a href="" class="ncode-btn-action"> <small>Anual</small></a>
+          </div>
+        </div>
+        <div class="card-pricing-contain active" id="pricing-mensal">
+          <div class="card-pricing-item">
+            <span class="name"><small>Plano</small> <br> <span>Gratuito</span> </span>
+            <span class="price">AO <span>0,00</span> </span>
+            <div class="items">
+              <small class="bi-check">1 Template no máximo</small>
+              <small class="bi-check">Template sem interação</small>
+              <small class="bi-check">Alteração limitada</small>
+              <small class="bi-check">Domínio disponivel por 30 dias</small>
+              <small class="bi-check">Sem suporte online</small>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+          <div class="card-pricing-item">
+            <span class="name"><small>Plano</small> <br> <span>Bronze</span> </span>
+            <span class="price">AO <span>25.000,00</span> </span>
+            <div class="items">
+              <small class="bi-check">3 Template no máximo</small>
+              <small class="bi-check">Template mais ou menos interativo</small>
+              <small class="bi-check">Alteração normalizada</small>
+              <small class="bi-check">Domínio disponivel por 45 dias</small>
+              <small class="bi-check">Suporte online limitada</small>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+          <div class="card-pricing-item">
+            <span class="name"><small>Plano</small> <br> <span>Prata</span> </span>
+            <span class="price">AO <span>37.500,00</span> </span>
+            <div class="items">
+              <small class="bi-check">7 Template no máximo</small>
+              <small class="bi-check">Template interativo</small>
+              <small class="bi-check">Alteração livre</small>
+              <small class="bi-check">Domínio disponivel por 90 dias</small>
+              <small class="bi-check">Suporte online</small>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+        </div>
+
+        <div class="card-pricing-contain" id="pricing-anual">
+          <div class="card-pricing-item">
+            <span class="name">Plano <span>Gratuito</span> </span>
+            <span class="price">AO <span>0,00</span> </span>
+            <div class="items">
+              <span class="bi-check">1 Template no máximo</span>
+              <span class="bi-check">Template sem interação</span>
+              <span class="bi-check">Alteração limitada</span>
+              <span class="bi-check">Domínio disponivel por 60 dias</span>
+              <span class="bi-check">Sem suporte online</span>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+          <div class="card-pricing-item">
+            <span class="name">Plano <span>Bronze</span> </span>
+            <span class="price">AO <span>45.000,00</span> </span>
+            <div class="items">
+              <span class="bi-check">3 Template no máximo</span>
+              <span class="bi-check">Template mais ou menos interativo</span>
+              <span class="bi-check">Alteração normalizada</span>
+              <span class="bi-check">Domínio disponivel por 105 dias</span>
+              <span class="bi-check">Suporte online limitada</span>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+          <div class="card-pricing-item">
+            <span class="name">Plano <span>Prata</span> </span>
+            <span class="price">AO <span>60.000,00</span> </span>
+            <div class="items">
+              <span class="bi-check">7 Template no máximo</span>
+              <span class="bi-check">Template interativo</span>
+              <span class="bi-check">Alteração livre</span>
+              <span class="bi-check">Domínio disponivel por 180 dias</span>
+              <span class="bi-check">Suporte online</span>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+        </div>
+
+
+      </div>
+
     </div>
   </div>
 </div>
@@ -180,7 +260,8 @@
             <span class="bi-chevron-down"></span>
           </div>
           <div class="faqs-contain">
-            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores et, veritatis ducimus similique numquam
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores et, veritatis ducimus similique
+              numquam
               repudiandae ullam veniam expedita voluptatem iste.</span>
           </div>
         </div>
