--- a/views/app/site/index.html
+++ b/views/app/site/index.html
@@ -9,7 +9,7 @@
         ipsum debitis, quis blanditiis ab sint odit quidem labore.</small>
 
       <div class="ncode-actions">
-        <a href="" class="ncode-btn-action"> <small>Explorar</small></a>
+        <a href="" class="ncode-btn-action active"> <small>Explorar</small></a>
         <a href="" class="ncode-btn-action"> <small>Registra-te</small></a>
       </div>
 
@@ -33,117 +33,40 @@
 </header>
 
 <div class="card-section">
-  <div class="card-section-header">
-    <div class="ncode-container">
-      <div class="title">
-        <small class="tw-muted">Nocode| uma Ferramenta Sílica</small>
-        <span class="bold">Conheça a nova tendência de negócios</span>
-      </div>
-    </div>
-  </div>
 
   <div class="card-section-contain">
     <div class="ncode-container">
       <div class="card-section-row">
-        <div class="contain-row">
-          <div class="list-vertical">
-            <div class="list-item-lead">
-              <span class="item">Tenha a possibilidade de:</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Cria a sua própria página</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Editar ela do seu jeito</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Gere os teus visitantes</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Converta-os em leads ou clientes</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Façam um marketing do teu négocio</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Promova os teus produtos e serviços</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">Disponibiliza ações específicas</span>
-            </div>
-            <div class="list-item">
-              <span class="bi-check2-all"></span>
-              <span class="item">E muitos mais | <a href=""><small>ver Sílica</small></a> </span>
-            </div>
+        <div class="contain-text">
+          <div class="text-header">
+            <span class="title">Nocode| Ferramenta Sílica</span>
+          </div>
+          <div class="text-items">
+            <small class="bi-arrow-right">A Sílica a pensar sempre em ti trazendo soluções inovadoras</small>
+            <small class="bi-arrow-right">Torne-se um parceiro com SP|Nocode</small>
+            <small class="bi-arrow-right">Adera ao projeto e facilite o seu trablaho</small>
+            <small class="bi-check tw-muted">Escolha um template a sua escolha</small>
+            <small class="bi-check tw-muted">Edite-a com o seu tom de gosto e salve-a</small>
+            <small class="bi-check tw-muted">Defina o novo domínio para o seu uso</small>
+            <small class="bi-check tw-muted">E publique o seu novo site</small>
           </div>
         </div>
-        <div class="contain-row">
-          <img src="/assets/images/pngegg.png" class="reaveled" alt="">
+        <div class="contain-static-slider">
+          <div class="static-slider-item">
+            <img src="/assets/images/ncode-1.jpg" alt="">
+          </div>
+          <div class="static-slider-item">
+            <img src="/assets/images/ncode-2.jpg" alt="">
+          </div>
+          <div class="static-slider-item">
+            <img src="/assets/images/ncode-3.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="card-section">
-  <div class="card-section-header">
-    <div class="ncode-container">
-      <div class="title">
-        <small class="tw-muted">Como funciona?</small>
-        <span class="bold">Aprende a trabalhar com Nocode</span>
-      </div>
-    </div>
-  </div>
-  <div class="card-section-contain">
-    <div class="ncode-container">
-      <div class="card-slider">
-        <div class="slider-item">
-          <div class="contain-text">
-            <span class="title">Primeiro</span>
-            <span>Procure por um template e Seleciona-o</span>
-          </div>
-          <div class="contain-img">
-            <img src="/assets/images/choose.png" alt="">
-          </div>
-        </div>
-        <div class="slider-item">
-          <div class="contain-text">
-            <span class="title">Segundo</span>
-            <span>Faça as suas alterações sem necessidade de mexer no código e salve-as</span>
-          </div>
-          <div class="contain-img">
-            <img src="/assets/images/choose.png" alt="">
-          </div>
-        </div>
-        <div class="slider-item">
-          <div class="contain-text">
-            <span class="title">Terceiro</span>
-            <span>Defina um nome para o seu domínio</span>
-          </div>
-          <div class="contain-img">
-            <img src="/assets/images/choose.png" alt="">
-          </div>
-        </div>
-        <div class="slider-item">
-          <div class="contain-text">
-            <span class="title">Quarto</span>
-            <span>Publique o Landing Page</span>
-          </div>
-          <div class="contain-img">
-            <img src="/assets/images/choose.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="card-section">
   <div class="card-section-contain">
@@ -152,8 +75,8 @@
         <div class="card-pricing-header">
           <span class="title">ESCOLHA UM PLANO PARA SI</span>
           <div class="ncode-actions">
-            <a href="" class="ncode-btn-action active"> <small>Mensal</small></a>
-            <a href="" class="ncode-btn-action"> <small>Anual</small></a>
+            <a href="" class="ncode-btn-action active" name="pricing-mensal"> <small>Mensal</small></a>
+            <a href="" class="ncode-btn-action" name="pricing-anual"> <small>Anual</small></a>
           </div>
         </div>
         <div class="card-pricing-contain active" id="pricing-mensal">
@@ -170,18 +93,6 @@
             <a href="" class="btn-action">Subscrever</a>
           </div>
           <div class="card-pricing-item">
-            <span class="name"><small>Plano</small> <br> <span>Bronze</span> </span>
-            <span class="price">AO <span>25.000,00</span> </span>
-            <div class="items">
-              <small class="bi-check">3 Template no máximo</small>
-              <small class="bi-check">Template mais ou menos interativo</small>
-              <small class="bi-check">Alteração normalizada</small>
-              <small class="bi-check">Domínio disponivel por 45 dias</small>
-              <small class="bi-check">Suporte online limitada</small>
-            </div>
-            <a href="" class="btn-action">Subscrever</a>
-          </div>
-          <div class="card-pricing-item">
             <span class="name"><small>Plano</small> <br> <span>Prata</span> </span>
             <span class="price">AO <span>37.500,00</span> </span>
             <div class="items">
@@ -193,42 +104,54 @@
             </div>
             <a href="" class="btn-action">Subscrever</a>
           </div>
+          <div class="card-pricing-item">
+            <span class="name"><small>Plano</small> <br> <span>Bronze</span> </span>
+            <span class="price">AO <span>25.000,00</span> </span>
+            <div class="items">
+              <small class="bi-check">3 Template no máximo</small>
+              <small class="bi-check">Template mais ou menos interativo</small>
+              <small class="bi-check">Alteração normalizada</small>
+              <small class="bi-check">Domínio disponivel por 45 dias</small>
+              <small class="bi-check">Suporte online limitada</small>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
         </div>
 
         <div class="card-pricing-contain" id="pricing-anual">
           <div class="card-pricing-item">
-            <span class="name">Plano <span>Gratuito</span> </span>
+            <span class="name"><small>Plano</small> <br> <span>Gratuito</span> </span>
             <span class="price">AO <span>0,00</span> </span>
             <div class="items">
-              <span class="bi-check">1 Template no máximo</span>
-              <span class="bi-check">Template sem interação</span>
-              <span class="bi-check">Alteração limitada</span>
-              <span class="bi-check">Domínio disponivel por 60 dias</span>
-              <span class="bi-check">Sem suporte online</span>
+              <small class="bi-check">1 Template no máximo</small>
+              <small class="bi-check">Template sem interação</small>
+              <small class="bi-check">Alteração limitada</small>
+              <small class="bi-check">Domínio disponivel por 60 dias</small>
+              <small class="bi-check">Sem suporte online</small>
             </div>
             <a href="" class="btn-action">Subscrever</a>
           </div>
           <div class="card-pricing-item">
-            <span class="name">Plano <span>Bronze</span> </span>
-            <span class="price">AO <span>45.000,00</span> </span>
-            <div class="items">
-              <span class="bi-check">3 Template no máximo</span>
-              <span class="bi-check">Template mais ou menos interativo</span>
-              <span class="bi-check">Alteração normalizada</span>
-              <span class="bi-check">Domínio disponivel por 105 dias</span>
-              <span class="bi-check">Suporte online limitada</span>
-            </div>
-            <a href="" class="btn-action">Subscrever</a>
-          </div>
-          <div class="card-pricing-item">
-            <span class="name">Plano <span>Prata</span> </span>
+            <span class="name"><small>Plano</small> <br> <span>Prata</span> </span>
             <span class="price">AO <span>60.000,00</span> </span>
             <div class="items">
-              <span class="bi-check">7 Template no máximo</span>
-              <span class="bi-check">Template interativo</span>
-              <span class="bi-check">Alteração livre</span>
-              <span class="bi-check">Domínio disponivel por 180 dias</span>
-              <span class="bi-check">Suporte online</span>
+              <small class="bi-check">7 Template no máximo</small>
+              <small class="bi-check">Template interativo</small>
+              <small class="bi-check">Alteração livre</small>
+              <small class="bi-check">Domínio disponivel por 180 dias</small>
+              <small class="bi-check">Suporte online</small>
+            </div>
+            <a href="" class="btn-action">Subscrever</a>
+          </div>
+          <div class="card-pricing-item">
+            <span class="name"><small>Plano</small> <br> <span>Bronze</span> </span>
+            <span class="price">AO <span>45.000,00</span> </span>
+            <div class="items">
+              <small class="bi-check">3 Template no máximo</small>
+              <small class="bi-check">Template mais ou menos interativo</small>
+              <small class="bi-check">Alteração normalizada</small>
+              <small class="bi-check">Domínio disponivel por 105 dias</small>
+              <small class="bi-check">Suporte online limitada</small>
             </div>
             <a href="" class="btn-action">Subscrever</a>
           </div>
@@ -245,8 +168,7 @@
   <div class="card-section-header">
     <div class="ncode-container">
       <div class="title">
-        <small class="tw-muted">Perguntas Frequentes</small>
-        <span class="bold">FAQ's</span>
+        <span class="bold">Perguntas Mais Frequentes</span>
       </div>
     </div>
   </div>
@@ -276,7 +198,7 @@
     <div class="ncode-container">
       <div class="title">
         <small class="tw-muted"></small>
-        <span class="bold">Contacte-Nos</span>
+        <span class="bold">Contactos</span>
       </div>
     </div>
   </div>
@@ -319,13 +241,19 @@
           </div>
         </div>
         <form action="" class="subject">
-          <div class="ncode-form-item">
-            <input type="text" class="ncode-input" name="contact_name" required>
-            <small class="placeholder">Nome</small>
+          <div class="ncode-form-row">
+            <div class="ncode-form-item">
+              <input type="text" class="ncode-input" name="contact_name" required>
+              <small class="placeholder">Nome</small>
+            </div>
+            <div class="ncode-form-item">
+              <input type="text" class="ncode-input" name="contact_email" required>
+              <small class="placeholder">Email</small>
+            </div>
           </div>
           <div class="ncode-form-item">
-            <input type="text" class="ncode-input" name="contact_email" required>
-            <small class="placeholder">Email</small>
+            <input type="text" class="ncode-input" name="contact_subject" required>
+            <small class="placeholder">Sujeito</small>
           </div>
           <div class="ncode-form-item">
             <textarea type="text" class="ncode-input" name="contact_msg" required></textarea>
